# pandas-ai

./: docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci-core.yml  ci-extensions.yml
extensions/connectors/sql/: pyproject.toml
extensions/connectors/yfinance/: pyproject.toml
extensions/ee/connectors/bigquery/: pyproject.toml
extensions/ee/connectors/databricks/: pyproject.toml
extensions/ee/connectors/oracle/: pyproject.toml
extensions/ee/connectors/snowflake/: pyproject.toml
extensions/ee/vectorstores/chromadb/: pyproject.toml
extensions/ee/vectorstores/lancedb/: pyproject.toml
extensions/ee/vectorstores/milvus/: pyproject.toml
extensions/ee/vectorstores/pinecone/: pyproject.toml
extensions/ee/vectorstores/qdrant/: pyproject.toml
extensions/llms/litellm/: pyproject.toml
extensions/llms/openai/: pyproject.toml
extensions/sandbox/docker/: pyproject.toml
extensions/sandbox/docker/pandasai_docker/: Dockerfile
