[tool.poetry]
name = "pandasai-databricks"
version = "0.1.4"
description = "Databricks connector integration for PandasAI"
authors = ["Gabriele Venturi"]
readme = "README.md"
license = "Proprietary"

[tool.poetry.urls]
"Documentation" = "https://docs.getpanda.ai/v3/data-ingestion"
"Repository" = "https://github.com/sinaptik-ai/pandas-ai"

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
pandasai = ">=3.0.0b4"
pandasai-sql = "^0.1.0"
pyarrow = "^14.0.1"
databricks-sql-connector = {extras = ["sqlalchemy"], version = "^4.0.0"}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pandasai-sql = { path = "../../../connectors/sql", develop = true }
jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
license-files = ["LICENSE"]