[tool.poetry]
name = "pandasai-qdrant"
version = "0.1.4"
description = "Qdrant integration for PandasAI"
authors = ["Gabriele Venturi"]
readme = "README.md"
license = "Proprietary"

[tool.poetry.urls]
"Documentation" = "https://docs.getpanda.ai/"
"Repository" = "https://github.com/sinaptik-ai/pandas-ai"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandasai = ">=3.0.0b4"
qdrant-client = "1.4.0"
numpy = "1.26.4"
sentence-transformers = "^5.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
license-files = ["LICENSE"]